--- a/1_Restructure_Input_Files.ipynb
+++ b/1_Restructure_Input_Files.ipynb
@@ -58,26 +58,13 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/gdrive/MyDrive/ATAS_Plus/Duration_Metrics"
+        "%cd /content/gdrive/MyDrive/ATAS_Plus/Duration_Metrics       # update to your directory"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cLxIGUDJFhzT",
-        "outputId": "ac8a0aae-43e8-4461-b0cf-d289eda4f075"
+        "id": "cLxIGUDJFhzT"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[Errno 2] No such file or directory: '/content/gdrive/MyDrive/ATAS_Plus/Duration_Metrics'\n",
-            "/content\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -145,26 +132,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yjrfuh3p1XTq",
-        "outputId": "78f0e5c3-8ba5-4891-abf4-46dec7212ea5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "yjrfuh3p1XTq"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: No .txt file found for  NM102\n",
-            "Warning: No TextGrid file found for  NM102\n",
-            "Warning: No .csv file found for  NM102\n",
-            "Warning: No .txt file found for  RS_C_16_XE\n",
-            "Warning: No TextGrid file found for  RS_C_16_XE\n",
-            "Warning: No .csv file found for  RS_C_16_XE\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# assemble input file names (frog)\n",
         "for ID in IDs_frog:\n",
@@ -219,24 +189,10 @@
         "          max_read_csv = len(pd.read_csv(ID + '_FS_' + 'reading' + '.' + ext))"
       ],
       "metadata": {
-        "id": "wpPeP8IJD74x",
-        "outputId": "0e4b85ec-9f5f-45e9-bd75-0e06d5329dde",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wpPeP8IJD74x"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: No .txt file found for  RS_C_16_XE\n",
-            "Warning: No TextGrid file found for  RS_C_16_XE\n",
-            "Warning: No .csv file found for  RS_C_16_XE\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -259,26 +215,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lOhutsCi2Tiq",
-        "outputId": "6414d191-fb9b-4664-d114-968dbb3d5c89",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lOhutsCi2Tiq"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: No .txt file found for  NM102\n",
-            "Warning: No TextGrid file found for  NM102\n",
-            "Warning: No .csv file found for  NM102\n",
-            "Warning: No .txt file found for  RS_C_16_XE\n",
-            "Warning: No TextGrid file found for  RS_C_16_XE\n",
-            "Warning: No .csv file found for  RS_C_16_XE\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#import frog data\n",
         "for ID in IDs_frog:\n",
@@ -323,24 +262,10 @@
         "          print(f\"Warning: No .csv file found for \", ID)"
       ],
       "metadata": {
-        "id": "aLnnr4YfEfz2",
-        "outputId": "f0d2cc8a-7a6c-42d5-c115-7bc7d6ee525d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "aLnnr4YfEfz2"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: No .txt file found for  RS_C_16_XE\n",
-            "Warning: No TextGrid file found for  RS_C_16_XE\n",
-            "Warning: No .csv file found for  RS_C_16_XE\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -369,28 +294,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Z_j2oUQVCOqw",
-        "outputId": "52082e7b-d111-4334-c6da-4ef2d2047919",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 399
-        }
+        "id": "Z_j2oUQVCOqw"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-c97dfcc0a78a>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mID\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIDs_reading\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mdf_read_txt_wide\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_read_txt_wide\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_read_txt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mID\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mID\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mIDs_frog\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mdf_frog_txt_wide\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_frog_txt_wide\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_frog_txt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mID\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpand\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3807\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3808\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3809\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/range.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m    393\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_indexing_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 395\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    396\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    397\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'RS_C_16_XE'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for ID in IDs_reading:\n",
         "  df_read_txt_wide = df_read_txt_wide.append(df_read_txt[ID].str.split(\"\\t\", expand = True, n = 4), ignore_index=True)\n",
@@ -1026,7 +932,7 @@
       },
       "outputs": [],
       "source": [
-        "%cd /content/gdrive/MyDrive/ATAS_Plus/Duration_Metrics/1.CombinedInputFiles/"
+        "%cd /content/gdrive/MyDrive/ATAS_Plus/Duration_Metrics/1.CombinedInputFiles/ # update to your directory"
       ]
     },
     {
